Swagger doc updated
